<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBG"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jasongagnon.qbrating.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/table">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/firstRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attempts"
            android:id="@+id/txtAttempts"
            android:textColor="@color/textColor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tbAttempts"
            android:backgroundTint="@color/textColor"
            android:textColor="@color/textColor"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/secondRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Completions"
            android:id="@+id/txtComp"
            android:textColor="@color/textColor"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tbComp"
            android:backgroundTint="@color/textColor"
            android:textColor="@color/textColor"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/thirdRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yards"
            android:id="@+id/txtYards"
            android:textColor="@color/textColor"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tbYards"
            android:backgroundTint="@color/textColor"
            android:textColor="@color/textColor"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fourthRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Interceptions"
            android:id="@+id/txtInt"
            android:textColor="@color/textColor"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tbInt"
            android:backgroundTint="@color/textColor"
            android:textColor="@color/textColor" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fifthRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Touchdowns"
            android:id="@+id/txtTouch"
            android:textColor="@color/textColor"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tbTouch"
            android:backgroundTint="@color/textColor"
            android:textColor="@color/textColor" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sixthRow">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GetRating"
            android:id="@+id/btnGetRating"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/seventhRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResult"
            android:textColor="@color/textColor"
            android:layout_span="2" />
    </TableRow>
</TableLayout>
